opam-version: "2.0"
version: "~dev"
name: "ocaml-platform"
synopsis: "A curated set of OCaml packages"
maintainer: "Antonin Décimo <antonin.decimo@gmail.com>"
authors: "Antonin Décimo <antonin.decimo@gmail.com>"
license: "MIT"
homepage: "https://github.com/MisterDA/ocaml-platform"
bug-reports: "https://github.com/MisterDA/ocaml-platform/issues"
depends: [
          "lwt" {= "5.1.1"}
          "cohttp" {="2.5.0"}
          "ocamlgraph" {="1.8.8"}
          "lablgtk3" {="3.1.0"}
          "menhir" {="20200211"}
          "yojson" {"1.7.0"}
          "odoc" {"1.5.0"}
          ]
dev-repo: "git+https://github.com/MisterDA/ocaml-platform"
