opam-version: "2.0"
version: "~dev"
name: "ocaml-platform-hello-world"
synopsis: "A curated set of OCaml packages"
maintainer: "Antonin Décimo <antonin.decimo@gmail.com>"
authors: "Antonin Décimo <antonin.decimo@gmail.com>"
license: "MIT"
homepage: "https://github.com/MisterDA/ocaml-platform"
bug-reports: "https://github.com/MisterDA/ocaml-platform/issues"
depends: [
  "ocaml-platform"
]
dev-repo: "git+https://github.com/MisterDA/ocaml-platform"
